--- a/test.html
+++ b/test.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-		
-		<p>djfhsiuefohoiufh</p>
-		<img src="" alt="" />
-	</body>
+	<meta charset="utf-8"/>
+  <head></head>
+<title></title>
+<style>
+  div{
+     width:300px;
+     height:200px;
+     border:2px dashed green;
+     font-size:39px;
+     }
+
+button{
+       width:30px;
+       height:40px;
+       border:none;
+       font-size:24px;
+      }
+    
+
+</style>
+<body>
+  <div>
+  <pre>dsfhjkrhoirheoi
+  </pre>
+
+   </div>
+<button>点你妹</button>
+</body>
+<script>
+var btn=document.getElementsByTagName("button")[0];
+var pe=document.getElementsByTagName("pre")[0];
+btn.onclick=function(){
+         pe.style.color="green"
+
+        };
+        </script>
 </html>
